fix modal editEstimatesHistory on mobile device

--- a/src/pages/Teacher/RatingHistory/index.module.scss
+++ b/src/pages/Teacher/RatingHistory/index.module.scss
@@ -15,6 +15,10 @@
   color: rgba(0, 0, 0, 0.75);
 }
 .content{
+  margin: 25px 0;
+  padding: 20px;
+  border: 1px solid #e8e8e8;
+  border-radius: 10px;
   height: 50vh;
   overflow-y: scroll;
 }
